--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <div class="container">
 
     <div class="left">
-        <!-- background-image place here! -->
+      <picture>
+        <source media="(max-width: 500px)" srcset="images/image-product-mobile.jpg">
+        <img src="images/image-product-desktop.jpg" alt="">
+      </picture>
     </div>
 
     <div class="right">
@@ -25,7 +28,6 @@
       <div class="price">
         <span class="current-price">$149.99</span>
         <span class="old-price">$169.99</span>
-        <img src="images/image-product-mobile.jpg" alt="">
       </div>
 
       
